<resources>
    <string name="app_name">syanti</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget password ..?</string>
    <string name="todo">TODO</string>
    <string name="LOGIN" />
    <string name="create_new_account">create_new_account</string>
    <string name="lastname" />
    <string name="last_name" />
    <string name="first_name" />
    <string name="Register" />
    <string name="phone" />
    <string name="rememberme">Rememberme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home" />
    <string name="search" />
    <string name="favorites" />
    <string name="profile" />
    <string name="home_fragment">Home fragment</string>
    <string name="search_fragment">Search fragment</string>
    <string name="favorite_fragment">Favorite fragment</string>
</resources>