<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pg_all"
    tools:context=".Client.Auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/todo"
            android:padding="25dp"
            android:src="@drawable/cg_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/draw_c_icon"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/pass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/draw_c_icon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/blacktx_log" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/forget_password"
            android:textColor="@color/blacktx_log"
            android:textStyle="bold" />
        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberme"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/blackbtn_log"
            android:text="@string/LOGIN"
            android:textAllCaps="true"
            android:textColor="@color/blacktx_btn" />
        <TextView
            android:id="@+id/tx_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/create_new_account"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>