<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pg_all"
    tools:context=".Client.Auth.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:id="@+id/igv_closeregist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"/>



            </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/ed_fname"

                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/draw_c_icon"
                android:hint="@string/first_name"
                android:inputType="textEmailAddress"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/ed_sname"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/draw_c_icon"
                android:hint="@string/last_name"
                android:inputType="textEmailAddress"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/ed_email_regist"

                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/draw_c_icon"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/ed_pass_regist"

                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/draw_c_icon"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:textColor="#000000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/draw_c_icon"
                android:hint="@string/phone"
                android:textColor="#000000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgv_loca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            app:srcCompat="@drawable/location" />

    </LinearLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressbar_register"
        android:visibility="gone"/>

        <Button
            android:id="@+id/btn_register"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/blackbtn_log"
            android:layout_alignParentBottom="true"
            android:text="@string/Register"
            android:textColor="@color/blacktx_btn" />

</RelativeLayout>